--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,11 @@
 // Footer styles.
 
+// For the canada logo: the color of the flag is red by default but is able to adapt
+// to the color determined by the selected UIO high contrast theme.
+.fill-f00 {
+	fill: var(--theme-link-fill, #f00);
+}
+
 footer {
 	background: $navy-light;
 	color: $white;
